Update files for work with docker and without it better

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build: .
     image: karmabot
     volumes:
-      - .:/app/data
+      - ./data:/app/data
     env_file:
     - .env
     container_name: karmabot-container
